fix tap targets spacing

--- a/src/styles/components/TableOfContents.scss
+++ b/src/styles/components/TableOfContents.scss
@@ -21,7 +21,10 @@
 
 	li {
 		display: block;
-		line-height: 0.75;
+
+		@include for-size(tablet) {
+			margin: 6px 0;
+		}
 
 		&::before {
 			margin-right: 0.5em;
